<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.pgoldberg.kassensturz.HartgeldFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!--5 Euro-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_5Euro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/textView_5Euro" />

                <EditText
                    android:id="@+id/editText_5EuroAnzahl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_span="0"
                    android:ems="10"
                    android:inputType="number" />
            </TableRow>

            <!--10 Euro-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_10Euro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/textView_10Euro" />

                <EditText
                    android:id="@+id/editText_10EuroAnzahl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:ems="10"
                    android:inputType="number" />
            </TableRow>

            <!--20 Euro-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_20Euro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/textView_20Euro" />

                <EditText
                    android:id="@+id/editText_20EuroAnzahl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:ems="10"
                    android:inputType="number" />
            </TableRow>

            <!--50 Euro-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_50Euro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/textView_50Euro" />

                <EditText
                    android:id="@+id/editText_50EuroAnzahl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:ems="10"
                    android:inputType="number" />
            </TableRow>

            <!--100 Euro-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_100Euro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/textView_100Euro" />

                <EditText
                    android:id="@+id/editText_100EuroAnzahl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:ems="10"
                    android:inputType="number" />
            </TableRow>

            <!--200 Euro-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_200Euro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/textView_200Euro" />

                <EditText
                    android:id="@+id/editText_200EuroAnzahl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:ems="10"
                    android:inputType="number" />
            </TableRow>

            <!--500 Euro-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_500Euro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/textView_500Euro" />

                <EditText
                    android:id="@+id/editText_500EuroAnzahl"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:ems="10"
                    android:inputType="number" />
            </TableRow>

        </TableLayout>
    </ScrollView>

</RelativeLayout>
