<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/fragment_hartgeld"
    tools:context="de.pgoldberg.kassensturz.HartgeldFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!--1 Cent-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_1Cent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/textView_1Cent" />

                <EditText
                    android:id="@+id/editText_1CentAnzahl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_span="0"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="4"/>
            </TableRow>

            <!--2Cent-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_2Cent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/textView_2Cent" />

                <EditText
                    android:id="@+id/editText_2CentAnzahl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="4"/>
            </TableRow>

            <!--5 Cent-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_5Cent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/textView_5Cent" />

                <EditText
                    android:id="@+id/editText_5CentAnzahl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="4"/>
            </TableRow>

            <!--10 Cent-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_10Cent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/textView_10Cent" />

                <EditText
                    android:id="@+id/editText_10CentAnzahl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="4"/>
            </TableRow>

            <!--20 Cent-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_20Cent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/textView_20Cent" />

                <EditText
                    android:id="@+id/editText_20CentAnzahl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="4"/>
            </TableRow>

            <!--50 Cent-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_50Cent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/textView_50Cent" />

                <EditText
                    android:id="@+id/editText_50CentAnzahl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="4"/>
            </TableRow>

            <!--1 Euro-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_1Euro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/textView_1Euro" />

                <EditText
                    android:id="@+id/editText_1EuroAnzahl"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="4"/>
            </TableRow>

            <!--2 Euro-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_2Euro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/textView_2Euro" />

                <EditText
                    android:id="@+id/editText_2EuroAnzahl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="4"/>
            </TableRow>
        </TableLayout>
    </ScrollView>

</RelativeLayout>
