<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.pgoldberg.kassensturz.HartgeldFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:measureWithLargestChild="false">

            <!--Summe Hargeld-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body1">

                <TextView
                    android:id="@+id/textView_SummeHartgeld"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/textView_SummeHartgeld"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:elegantTextHeight="false"
                    android:height="48dp"
                    android:gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:id="@+id/summeHartgeld"
                    android:layout_column="2"
                    android:paddingLeft="48dp"
                    android:digits="2" />

            </TableRow>

            <!--Summe Papiergeld-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_SummePapiergeld"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/textView_SummePapiergeld"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:height="48dp"
                    android:gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:id="@+id/summePapiergeld"
                    android:layout_column="2"
                    android:paddingLeft="48dp" />

            </TableRow>

            <!--Summe Kassensturz-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_SummeKassensturz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/textView_SummeKassensturz"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:height="48dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:id="@+id/summeKassensturz"
                    android:layout_column="2"
                    android:paddingLeft="48dp" />

            </TableRow>

        </TableLayout>
    </ScrollView>

</RelativeLayout>
